Make compatible with JRE1.3